[#14674] Fix unreplaced XSD placeholders
* Also make infinispan-maven-default-plugin fail in case there are
  unreplaced placeholders